--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
   text-align: center;
+  font-family: 'Gaegu', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.name {
+  font-size: 32px;
+  font-weight: bold;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: flex-start;
+}
+
+.pic {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.btn_profile {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.setting {
+  display: flex;
+  justify-content: flex-start;
+  border-style: solid;
+  border-radius: 30px;
+  border-color: #7b7aaf;
+  background-color: #7b7aaf;
+  width: 120px;
+  height: 50px;
+}
+
+.setting_p {
+  font-size: 30px;
+  color: white; 
+  font-weight: bold;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 2px 10px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.home {
+  font-size: 30px;
+  color: white; 
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  padding: 2px 10px;
+  border-style: solid;
+  border-radius: 30px;
+  border-color: #b8bedd;
+  background-color: #b8bedd;
+  width: 120px;
+  height: 50px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reminder {
+  font-size: 30px;
+  color: #7b7aaf;
+  display: flex;
+  font-weight: bold;
+  justify-content: flex-start;
 }
