--- a/src/App.css
+++ b/src/App.css
@@ -24,43 +24,63 @@
   display: flex;
   justify-content: flex-start;
   border-style: solid;
-  border-radius: 30px;
+  border-radius: 3em;
   border-color: #7b7aaf;
   background-color: #7b7aaf;
-  width: 120px;
-  height: 50px;
+  margin: 0.5cm;
+  width: 9rem;
+  height: 3.5rem;
 }
 
 .setting_p {
-  font-size: 30px;
+  font-size: 1.5rem;
   color: white; 
   font-weight: bold;
   display: flex;
   justify-content: center;
-  padding: 2px 10px;
-  
+  margin-left: 0.5cm;
+  margin-top: 0.25cm;
+}
+
+.icon_setting {
+  margin-right: 0.1cm;
+  margin-top: 0.1cm;
 }
 
 .home {
-  font-size: 30px;
+  display: flex;
+  justify-content: flex-start;
+  border-style: solid;
+  border-radius: 3em;
+  border-color: #b8bedd;
+  background-color: #b8bedd;
+  margin: 0.5cm;
+  width: 9rem;
+  height: 3.5rem;
+}
+
+.home_p {
+  font-size: 1.5rem;
   color: white; 
   font-weight: bold;
   display: flex;
   justify-content: center;
-  padding: 2px 10px;
-  border-style: solid;
-  border-radius: 30px;
-  border-color: #b8bedd;
-  background-color: #b8bedd;
-  width: 120px;
-  height: 50px;
+  margin-left: 0.5cm;
+  margin-top: 0.25cm;
+}
 
+.icon_home {
+  margin-right: 0.1cm;
+  margin-top: 0.1cm;
+  margin-left: -0.25cm;
 }
 
 .reminder {
-  font-size: 30px;
+  font-size: 1.5rem;
   color: #7b7aaf;
   display: flex;
-  font-weight: bold;
   justify-content: flex-start;
+  font-weight: bold;
+  margin-left: 1cm;
+  margin-top: 0.5cm;
 }
