--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: flex-start;
     margin: 0.5cm;
+    margin-left: 1cm;
     font-weight: bold;
     font-size: 1rem;
 }
@@ -9,17 +10,20 @@
 .profile_img {
     display: flex;
     justify-content: flex-start;
-    margin: 0.5cm;
+    margin: auto;
+    width: 95%;
+    height: 95%;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .bc_img {
     display: flex;
     justify-content: flex-start;
-    border: "4px solid white";
     border-radius: 10em;
     border-color: #7b7aaf;
     background-color: #7b7aaf;
     margin: 0.5cm;
-    width: 235px;
-    height: 235px;
+    width: 15rem;
+    height: 15rem;
 }
